--- a/frontend/app/views/repositories/edit.html.erb
+++ b/frontend/app/views/repositories/edit.html.erb
@@ -1,4 +1,4 @@
-<%= setup_context :object => JSONModel(:repository).from_hash(@repository['repository']), :title => @repository.id %>
+<%= setup_context :object => JSONModel(:repository).new(@repository['repository']), :title => @repository.id %>
 
 <%= form_for @repository, :as => "repository", :url => {:action => :update}, :html => {:class => 'form-horizontal'} do |f| %>
   <%= form_context :repository, @repository do |form| %>
