wip frontend ui supports streaming import with realtime feedback

--- a/frontend/app/assets/stylesheets/archivesspace/common.less
+++ b/frontend/app/assets/stylesheets/archivesspace/common.less
@@ -332,3 +332,14 @@ h4 > .context-help {
 .btn-mini > .caret {
   margin-top: 8px;
 }
+
+/* import stats */
+
+#import-results {
+  margin-left: 5px;
+  background-color: #FFFF99;
+}
+
+.import-errors {
+  background-color: #FF0000;
+}
