When dragging and dropping nodes in trees, don't touch the lock version of affected records.
This prevents problems when the user has an edit form open, manipulates the
tree, then submits the form.

--- a/frontend/app/views/archival_objects/_form_container.html.erb
+++ b/frontend/app/views/archival_objects/_form_container.html.erb
@@ -7,7 +7,7 @@
 
 <fieldset>
 
-  <%= form.hidden_input "parent" %>
+  <%= form.hidden_input "parent", nil, {"data-base-name" => "archival_object[parent]", "class" => "hidden-parent-uri"} %>
   <%= form.hidden_input "resource" %>
   <%= hidden_field_tag "id", @archival_object.id %>
 
