--- a/frontend/app/assets/javascripts/tree.js.erb
+++ b/frontend/app/assets/javascripts/tree.js.erb
@@ -466,16 +466,21 @@ $(function() {
           parent: parent_id,
           index: newIndex
         },
-        success: function() {
-          console.warn("NEED TO FIX THIS AS LOCK_VERSION, POSITION, PARENT MAR BECOME OUT OF SYNC WITH FORM")
-//          var currentNodeEl = $(".selected", $tree);
-//          if (nodeEl.attr("id") == currentNodeEl.attr("id")) {
-//            // we need to update the hidden input 'position' in the form
-//            $("#"+nodeEl.attr("rel")+"_position_", $container).val(parseInt(newIndex));
-//            if (parent_id != "") {
-//              $("#"+nodeEl.attr("rel")+"_parent_", $container).val(targetNodelEl.data("uri"));
-//            }
-//          }
+        success: function(data) {
+          // If the reparented record's form is open, update its
+          // hidden field.
+          if (nodeEl.data("id").toString() === $("form input#id").val()) {
+            var hiddenInput = $("input.hidden-parent-uri");
+            var name = hiddenInput.data('base-name');
+
+            if (data.parent) {
+              hiddenInput.attr('name', name + '[ref]');
+              hiddenInput.val(data.parent);
+            } else {
+              hiddenInput.attr('name', name);
+              hiddenInput.val(null);
+            }
+          }
         }
       });
     }
