--- a/frontend/app/views/resources/_form_container.html.erb
+++ b/frontend/app/views/resources/_form_container.html.erb
@@ -56,6 +56,7 @@
   <% end %>
 
   <% form.emit_template("resource") %>
+  <%= render :partial => "archival_objects/template_rde" %>
 
   <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "related_accessions", :template => "resource_related_accessions"} %>
   <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "linked_agents", :template => "resource_linked_agent"} %>
