--- a/frontend/app/assets/javascripts/tree.js.erb
+++ b/frontend/app/assets/javascripts/tree.js.erb
@@ -470,15 +470,18 @@ $(function() {
           // If the reparented record's form is open, update its
           // hidden field.
           if (nodeEl.data("id").toString() === $("form input#id").val()) {
-            var hiddenInput = $("input.hidden-parent-uri");
-            var name = hiddenInput.data('base-name');
+            var hiddenInput = $("input.hidden-parent-uri", $container);
 
             if (data.parent) {
-              hiddenInput.attr('name', name + '[ref]');
+              hiddenInput.attr('name', nodeEl.attr("rel") + '[parent][ref]');
               hiddenInput.val(data.parent);
             } else {
-              hiddenInput.attr('name', name);
+              hiddenInput.attr('name', nodeEl.attr("rel")+ '[parent]');
               hiddenInput.val(null);
+            }
+
+            if (data.position) {
+              $("#"+nodeEl.attr("rel")+"_position_", $container).val(data.position);
             }
           }
         }
