Update the tree.js to update the position of the selected node when nodes are moved (to ensure it's hidden input value for position is kept up to date)

--- a/frontend/app/assets/javascripts/tree.js.erb
+++ b/frontend/app/assets/javascripts/tree.js.erb
@@ -479,11 +479,10 @@ $(function() {
               hiddenInput.attr('name', nodeEl.attr("rel")+ '[parent]');
               hiddenInput.val(null);
             }
-
-            if (data.position) {
-              $("#"+nodeEl.attr("rel")+"_position_", $container).val(data.position);
-            }
           }
+
+          var selectedNode = $tree.jstree("get_selected");
+          $("#"+selectedNode.attr("rel")+"_position_", $container).val(selectedNode.index());
         }
       });
     }
