--- a/frontend/app/views/resources/_edit_inline.html.erb
+++ b/frontend/app/views/resources/_edit_inline.html.erb
@@ -7,7 +7,9 @@
       <div class="span9">
         <%= render :partial => "toolbar" %>
         <div class="record-pane">
-           <%= render :partial => "resources/form_container", :locals => {:form => form} %>
+          <%= render :partial => "resources/form_container", :locals => {:form => form} %>
+          <%= render :partial => "archival_objects/template_rde", :locals => {:parent => @resource} %>
+
            <div class="form-actions">
               <button type="submit" class="btn btn-primary"><%= I18n.t("actions.save_prefix") %> <%= I18n.t("resource._singular") %></button>
               <%= link_to I18n.t("actions.cancel"), :back, :class => "btn btn-cancel" %>
