--- a/frontend/app/views/shared/_templates.html.erb
+++ b/frontend/app/views/shared/_templates.html.erb
@@ -31,6 +31,15 @@
    </div>
 --></div>
 
+<div id="modal_content_loading_template"><!--
+  <div class="modal-body">
+    <div class="modal-loading-message">
+      <div class="alert alert-info">Loading...</div>
+    </div>
+  </div>
+--></div>
+
+
 <div id="linker_browsemodal_template"><!--
    <div class="modal-body linker-container">
       <div class="linker-list"></div>
