--- a/frontend/app/views/shared/_templates.html.erb
+++ b/frontend/app/views/shared/_templates.html.erb
@@ -1,5 +1,5 @@
 <div id="modal_custom_template"><!--
-   <div class="modal hide {if fill} container{/if}" id="${id}">
+   <div class="modal hide {if fill} ${fill}{/if}" id="${id}">
       <div class="modal-header">
         <a class="close" data-dismiss="modal">×</a>
         <h3>${title|h}</h3>
